k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical-backend-service-new
spec:
  selector:
    app: infisical-backend-new
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
