k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - " "  
    secretName: tls-secret  
  rules:
  - host: " "  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infisical-backend-service-new
            port:
              number: 80
